Fix link colour in footer in high contrast theme. Improve homepage work item hover state in high contrast theme

--- a/src/scss/components/_footer-home.scss
+++ b/src/scss/components/_footer-home.scss
@@ -53,6 +53,14 @@
     }
 }
 
+[data-user-color-scheme="high-contrast"] {
+    .home-footer {
+        a {
+            color: var(--color-base);
+        }
+    }
+}
+
 @media (prefers-color-scheme: dark) {
     .home-footer {
         background: var(--color-text);
