--- a/src/scss/components/_work-home.scss
+++ b/src/scss/components/_work-home.scss
@@ -136,6 +136,10 @@ $max_font_work_link: 7.5rem;
             &:hover,
             &:focus {
                 background-color: darken(#d0d0d0, 33.333%);
+
+                img {
+                    mix-blend-mode: luminosity;
+                }
             }
 
             .work-item__text {
